add docker related files and update pyg version

--- a/section_deep_learning/edge_conv.ipynb
+++ b/section_deep_learning/edge_conv.ipynb
@@ -2,22 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Bad key \"text.kerning_factor\" on line 4 in\n",
-      "/opt/conda/lib/python3.7/site-packages/matplotlib/mpl-data/stylelib/_classic_test_patch.mplstyle.\n",
-      "You probably need to get an updated matplotlibrc file from\n",
-      "https://github.com/matplotlib/matplotlib/blob/v3.1.3/matplotlibrc.template\n",
-      "or from the matplotlib source distribution\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pathlib import Path\n",
     "\n",
@@ -28,7 +15,7 @@
     "dataset_dir = current_path / \"modelnet10\"\n",
     "\n",
     "pre_transform = T.Compose([\n",
-    "    T.SamplePoints(1024, remove_faces=True, include_normals=False),\n",
+    "    T.SamplePoints(1024, remove_faces=True, include_normals=True),\n",
     "    T.NormalizeScale(),\n",
     "])\n",
     "\n",
@@ -38,17 +25,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Batch(batch=[32768], pos=[32768, 3], y=[32])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from torch_geometric.data import DataLoader as DataLoader\n",
     "dataloader = DataLoader(train_dataset, batch_size=32, shuffle=False)\n",
@@ -58,19 +37,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([2, 524288])\n",
-      "tensor([[    0,     0,     0,  ..., 32767, 32767, 32767],\n",
-      "        [    0,   462,   780,  ..., 31949, 32625, 32040]])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from torch_geometric.nn import knn\n",
     "\n",
@@ -81,17 +50,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([524288, 3]) torch.Size([524288, 3])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "p = batch.pos[assign_index[1, :], :]\n",
     "q = batch.pos[assign_index[0, :], :]\n",
@@ -100,17 +61,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([32768, 64])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "from torch_geometric.nn import max_pool_x\n",
@@ -163,7 +116,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
