--- a/section_object_recognition/primitive_extraction.ipynb
+++ b/section_object_recognition/primitive_extraction.ipynb
@@ -27,29 +27,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Jupyter environment detected. Enabling Open3D WebVisualizer.\n",
-      "[Open3D INFO] WebRTC GUI backend enabled.\n",
-      "[Open3D INFO] WebRTCWindowSystem: HTTP handshake server disabled.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'0.13.0'"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import open3d as o3d\n",
     "import numpy as np\n",
@@ -60,11 +40,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pcd = o3d.io.read_point_cloud(\"../data/tabletop_scene1.ply\")\n",
+    "pcd = o3d.io.read_point_cloud(\"../data/tabletop_scene.ply\")\n",
     "o3d.visualization.draw_geometries([pcd])"
    ]
   },
@@ -80,17 +60,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Plane equation: 0.02x + 0.74y + 0.67z + -0.31 = 0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "plane_model, inliers = pcd.segment_plane(distance_threshold=0.005,\n",
     "                                         ransac_n=3,\n",
@@ -126,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,21 +295,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Update: Fitness = 0.3391, Inlier_dist = 0.0006\n",
-      "Update: Fitness = 0.3396, Inlier_dist = 0.0010\n",
-      "Sphere equation: (x-0.12)^2 + (y-0.07)^2 + (z-0.34)^2 = 0.04^2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Parameters\n",
     "ransac_n = 4 # 点群から選択する点数．球の場合は4．\n",
@@ -382,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
