--- a/section_registration/ICP-point-to-plane.ipynb
+++ b/section_registration/ICP-point-to-plane.ipynb
@@ -5,9 +5,6 @@
    "metadata": {},
    "source": [
     "# Point-to-plane ICP\n",
-    "### 参考文献\n",
-    "- [トロント大学講義資料](https://github.com/alecjacobson/geometry-processing-registration)\n",
-    "\n",
     "\n",
     "## 概要\n",
     "ICPアルゴリズムは次の４つの手順を踏むことによって，ソース点群をターゲット点群へ位置合わせする剛体変換を算出します．\n",
@@ -196,8 +193,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pcd1 = o3d.io.read_point_cloud( \"data/bun000.pcd\" )\n",
-    "pcd2 = o3d.io.read_point_cloud( \"data/bun045.pcd\" )\n",
+    "import open3d as o3d\n",
+    "import numpy as np\n",
+    "import copy\n",
+    "\n",
+    "pcd1 = o3d.io.read_point_cloud( \"../data/bun000.pcd\" )\n",
+    "pcd2 = o3d.io.read_point_cloud( \"../data/bun045.pcd\" )\n",
     "\n",
     "pcd_s = pcd1.voxel_down_sample(voxel_size=0.003)\n",
     "pcd_t = pcd2.voxel_down_sample(voxel_size=0.003)\n",
@@ -444,7 +445,9 @@
    "outputs": [],
    "source": [
     "# 誤差のプロット\n",
+    "import matplotlib.pyplot as plt\n",
     "import matplotlib.ticker as ticker\n",
+    "\n",
     "plt.figure(dpi=150)\n",
     "plt.ylabel(\"Distance [m/pts.]\")\n",
     "plt.xlabel(\"Iteration\")\n",
@@ -454,25 +457,6 @@
     "plt.gca().get_xaxis().set_major_locator(ticker.MaxNLocator(integer=True))\n",
     "\n",
     "plt.savefig(\"reg_error_compared.png\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 誤差のプロット\n",
-    "import matplotlib.ticker as ticker\n",
-    "plt.figure(dpi=150)\n",
-    "plt.ylabel(\"Distance [m/pts.]\")\n",
-    "plt.xlabel(\"Iteration\")\n",
-    "plt.plot(reg1.d, c=\"b\")\n",
-    "#plt.plot(reg2.d, c=\"r\")\n",
-    "plt.legend(labels=[\"Point-to-point\"])\n",
-    "plt.gca().get_xaxis().set_major_locator(ticker.MaxNLocator(integer=True))\n",
-    "\n",
-    "plt.savefig(\"reg_error.png\")"
    ]
   }
  ],
@@ -495,7 +479,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
