--- a/section_registration/ICP-point-to-point.ipynb
+++ b/section_registration/ICP-point-to-point.ipynb
@@ -41,8 +41,8 @@
     "import copy\n",
     "\n",
     "\n",
-    "pcd1 = o3d.io.read_point_cloud( \"data/bun000.pcd\" )\n",
-    "pcd2 = o3d.io.read_point_cloud( \"data/bun045.pcd\" )\n",
+    "pcd1 = o3d.io.read_point_cloud( \"../data/bun000.pcd\" )\n",
+    "pcd2 = o3d.io.read_point_cloud( \"../data/bun045.pcd\" )\n",
     "\n",
     "pcd_s = pcd1.voxel_down_sample(voxel_size=0.005)\n",
     "pcd_t = pcd2.voxel_down_sample(voxel_size=0.005)"
@@ -804,7 +804,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
