section_other_types kousei

--- a/section_other_types/o3d_marching_cubes.ipynb
+++ b/section_other_types/o3d_marching_cubes.ipynb
@@ -58,7 +58,7 @@
     "        self.metadata = meta\n",
     "        self.pose = mat\n",
     "    def __str__(self):\n",
-    "        return 'Metadata : ' + ' '.join(map(str, self.metadata)) + '\\n' + \"Pose : \" + \"\\n\" + np.array_str(self.pose)\n",
+    "        return 'Metadata : ' + ' '.join(map(str, self.metadata)) + \"\\nPose : \\n\" + np.array_str(self.pose)\n",
     "\n",
     "def read_trajectory(filename):\n",
     "    traj = []\n",
