--- a/section_other_types/o3d_rgbd_odometry.ipynb
+++ b/section_other_types/o3d_rgbd_odometry.ipynb
@@ -46,21 +46,21 @@
     "source_depth = o3d.io.read_image(dirname + \"/RGBD/depth/00000.png\")\n",
     "target_color = o3d.io.read_image(dirname + \"/RGBD/color/00001.jpg\")\n",
     "target_depth = o3d.io.read_image(dirname + \"/RGBD/depth/00001.png\")\n",
-    "source_rgbd_image = o3d.geometry.RGBDImage.create_from_color_and_depth(source_color, source_depth)\n",
-    "target_rgbd_image = o3d.geometry.RGBDImage.create_from_color_and_depth(target_color, target_depth)\n",
+    "source_rgbd = o3d.geometry.RGBDImage.create_from_color_and_depth(source_color, source_depth)\n",
+    "target_rgbd = o3d.geometry.RGBDImage.create_from_color_and_depth(target_color, target_depth)\n",
     "\n",
     "plt.subplot(2, 2, 1)\n",
-    "plt.title('Source grayscale image')\n",
-    "plt.imshow(source_rgbd_image.color)\n",
+    "plt.title("Source grayscale image")\n",
+    "plt.imshow(source_rgbd.color)\n",
     "plt.subplot(2, 2, 2)\n",
-    "plt.title('Source depth image')\n",
-    "plt.imshow(source_rgbd_image.depth)\n",
+    "plt.title("Source depth image")\n",
+    "plt.imshow(source_rgbd.depth)\n",
     "plt.subplot(2, 2, 3)\n",
-    "plt.title('Target grayscale image')\n",
-    "plt.imshow(target_rgbd_image.color)\n",
+    "plt.title("Target grayscale image")\n",
+    "plt.imshow(target_rgbd.color)\n",
     "plt.subplot(2, 2, 4)\n",
-    "plt.title('Target depth image')\n",
-    "plt.imshow(target_rgbd_image.depth)\n",
+    "plt.title("Target depth image")\n",
+    "plt.imshow(target_rgbd.depth)\n",
     "plt.show()"
    ]
   },
@@ -121,7 +121,7 @@
     "option = o3d.pipelines.odometry.OdometryOption()\n",
     "odo_init = np.identity(4)\n",
     "print(option)\n",
-    "[success_term, trans_term, info] = o3d.pipelines.odometry.compute_rgbd_odometry(source_rgbd_image, target_rgbd_image, pinhole_camera_intrinsic, odo_init, o3d.pipelines.odometry.RGBDOdometryJacobianFromColorTerm(), option)"
+    "[success_term, trans_term, info] = o3d.pipelines.odometry.compute_rgbd_odometry(source_rgbd, target_rgbd, pinhole_camera_intrinsic, odo_init, o3d.pipelines.odometry.RGBDOdometryJacobianFromColorTerm(), option)"
    ]
   },
   {
@@ -159,9 +159,9 @@
     "if not success_term:\n",
     "    exit()\n",
     "source_pcd = o3d.geometry.PointCloud.create_from_rgbd_image(\n",
-    "    source_rgbd_image, pinhole_camera_intrinsic)\n",
+    "    source_rgbd, pinhole_camera_intrinsic)\n",
     "target_pcd = o3d.geometry.PointCloud.create_from_rgbd_image(\n",
-    "    target_rgbd_image, pinhole_camera_intrinsic)\n",
+    "    target_rgbd, pinhole_camera_intrinsic)\n",
     "print(\"Using RGB-D Odometry\")\n",
     "print(trans_term)\n",
     "source_pcd.transform(trans_term)\n",
