--- a/section_other_types/o3d_rgbd_odometry.ipynb
+++ b/section_other_types/o3d_rgbd_odometry.ipynb
@@ -50,16 +50,16 @@
     "target_rgbd = o3d.geometry.RGBDImage.create_from_color_and_depth(target_color, target_depth)\n",
     "\n",
     "plt.subplot(2, 2, 1)\n",
-    "plt.title("Source grayscale image")\n",
+    "plt.title(\"Source grayscale image\")\n",
     "plt.imshow(source_rgbd.color)\n",
     "plt.subplot(2, 2, 2)\n",
-    "plt.title("Source depth image")\n",
+    "plt.title(\"Source depth image\")\n",
     "plt.imshow(source_rgbd.depth)\n",
     "plt.subplot(2, 2, 3)\n",
-    "plt.title("Target grayscale image")\n",
+    "plt.title(\"Target grayscale image\")\n",
     "plt.imshow(target_rgbd.color)\n",
     "plt.subplot(2, 2, 4)\n",
-    "plt.title("Target depth image")\n",
+    "plt.title(\"Target depth image\")\n",
     "plt.imshow(target_rgbd.depth)\n",
     "plt.show()"
    ]
