--- a/section_registration/ICP-point-to-plane.ipynb
+++ b/section_registration/ICP-point-to-plane.ipynb
@@ -23,9 +23,9 @@
     "\n",
     "## Point-to-plane目的関数\n",
     "Point-to-planeは，ソースの点とターゲットの面の距離を評価する目的関数です．\n",
-    "目的関数に入る前に，点$P$を${\\bf p}=(x,y,z)$，面を単位法線ベクトル${\\bf n}_x$と面上の任意の点${\\bf x}=(x_0, y_0, z_0)$として，この距離について考えます．\n",
+    "目的関数に入る前に，点$P$を${\\bf p}=(x,y,z)^\\top$，面を単位法線ベクトル${\\bf n}_x$と面上の任意の点${\\bf x}=(x_0, y_0, z_0)^\\top$として，この距離について考えます．\n",
     "距離は，点から面への最短距離，つまり点$P$から面へ伸ばした垂線の長さです．\n",
-    "これは，面上の任意の点から点$P$までのベクトル$v = (x-x_0, y-y_0, z-z_0)$を${\\bf n}_x$に射影したベクトルの長さになります．\n",
+    "これは，面上の任意の点から点$P$までのベクトル${\\bf v} = (x-x_0, y-y_0, z-z_0)^\\top$を${\\bf n}_x$に射影したベクトルの長さになります．\n",
     "したがって，\n",
     "\n",
     "$d = |{\\bf v}\\cdot {\\bf n}| = | ({\\bf p}-{\\bf x})\\cdot {\\bf n}_x|$\n",
@@ -83,7 +83,7 @@
     "\\begin{equation}\n",
     "R(\\theta,{\\bf w}) = I_3 + \n",
     "\\begin{bmatrix}\n",
-    "0 & a_3 & a_2\\\\\n",
+    "0 & -a_3 & a_2\\\\\n",
     "a_3 & 0 & -a_1\\\\\n",
     "-a_2 & a_1 & 0\\\\\n",
     "\\end{bmatrix}\n",
@@ -105,7 +105,7 @@
     "E({\\bf a,t}) = \\Sigma_{({\\bf x},{\\bf p})\\in \\mathcal{K}}(( {\\bf p} + {\\bf a}\\times{\\bf p} + {\\bf t} - {\\bf x}  )\\cdot{\\bf n}_x)^2\n",
     "\\end{equation}\n",
     "\n",
-    "次に，未知の要素を6次元ベクトル${\\bf u}^T = [{\\bf a}^T  {\\bf t}^T]$でまとめて，スカラー三重積の性質に注意しながら，目的関数の括弧内を展開します．\n",
+    "次に，未知の要素を6次元ベクトル${\\bf u}^\\top = [{\\bf a}^\\top {\\bf t}^\\top]$でまとめて，スカラー三重積の性質に注意しながら，目的関数の括弧内を展開します．\n",
     "\n"
    ]
   },
@@ -114,7 +114,7 @@
    "metadata": {},
    "source": [
     "\\begin{equation}\n",
-    "E({\\bf a,t}) = \\sum_{({\\bf x},{\\bf p})\\in \\mathcal{K}}( ({\\bf p}\\times{\\bf n}_x)^T{\\bf a} + {\\bf n}_x^T{\\bf t} - {\\bf n}_x^T( {\\bf x}-{\\bf p} ))^2\n",
+    "E({\\bf a,t}) = \\sum_{({\\bf x},{\\bf p})\\in \\mathcal{K}}( ({\\bf p}\\times{\\bf n}_x)^\\top{\\bf a} + {\\bf n}_x^\\top{\\bf t} - {\\bf n}_x^\\top( {\\bf x}-{\\bf p} ))^2\n",
     "\\end{equation}"
    ]
   },
@@ -123,7 +123,7 @@
    "metadata": {},
    "source": [
     "\\begin{equation}\n",
-    "E({\\bf u}) = \\sum_{({\\bf x},{\\bf p})\\in \\mathcal{K}}( [({\\bf p}\\times{\\bf n}_x)^T   {\\bf n}_x^T]{\\bf u} - {\\bf n}_x^T( {\\bf x}-{\\bf p} ))^2\n",
+    "E({\\bf u}) = \\sum_{({\\bf x},{\\bf p})\\in \\mathcal{K}}( [({\\bf p}\\times{\\bf n}_x)^\\top  {\\bf n}_x^\\top]{\\bf u} - {\\bf n}_x^\\top( {\\bf x}-{\\bf p} ))^2\n",
     "\\end{equation}"
    ]
   },
@@ -133,20 +133,20 @@
    "source": [
     "\\begin{equation}\n",
     "\\begin{split}\n",
-    "E({\\bf u}) =  & {\\bf u}^T\\underbrace{(\\Sigma_{({\\bf x},{\\bf p})\\in \\mathcal{K}}\n",
+    "E({\\bf u}) =  & {\\bf u}^\\top\\underbrace{(\\Sigma_{({\\bf x},{\\bf p})\\in \\mathcal{K}}\n",
     "\\begin{bmatrix}\n",
     "({\\bf p}\\times{\\bf n}_x) \\\\\n",
     "{\\bf n}_x \\\\\n",
     "\\end{bmatrix} \n",
     "\\begin{bmatrix}\n",
-    "[({\\bf p}\\times{\\bf n}_x)^T  & {\\bf n}_x^T]\n",
+    "[({\\bf p}\\times{\\bf n}_x)^\\top & {\\bf n}_x^\\top]\n",
     "\\end{bmatrix})}_{A \\in \\mathbb{R}^{6\\times 6}}{\\bf u} \\\\\n",
-    " &-2{\\bf u}^T\\underbrace{(\\Sigma_{({\\bf x},{\\bf p})\\in \\mathcal{K}}\n",
+    " &-2{\\bf u}^\\top\\underbrace{(\\Sigma_{({\\bf x},{\\bf p})\\in \\mathcal{K}}\n",
     "\\begin{bmatrix}\n",
     "({\\bf p}\\times{\\bf n}_x) \\\\\n",
     "{\\bf n}_x \\\\\n",
-    "\\end{bmatrix}{\\bf n}_x^T( {\\bf x}-{\\bf p} ) )}_{{\\bf b} \\in \\mathbb{R}^6} \\\\\n",
-    "& +\\underbrace{(\\Sigma_{({\\bf x},{\\bf p})\\in \\mathcal{K}}( {\\bf x}-{\\bf p} )^T{\\bf n}_x{\\bf n}_x^T( {\\bf x}-{\\bf p} ))}_{constant}\n",
+    "\\end{bmatrix}{\\bf n}_x^\\top( {\\bf x}-{\\bf p} ) )}_{{\\bf b} \\in \\mathbb{R}^6} \\\\\n",
+    "& +\\underbrace{(\\Sigma_{({\\bf x},{\\bf p})\\in \\mathcal{K}}( {\\bf x}-{\\bf p} )^\\top{\\bf n}_x{\\bf n}_x^\\top( {\\bf x}-{\\bf p} ))}_{constant}\n",
     "\\end{split}\n",
     "\\end{equation}"
    ]
@@ -158,7 +158,7 @@
     "第１項の括弧内を6x6行列$A$，第２項の括弧内を6次元ベクトル$\\bf b$とすると，$\\bf u$に関する二次形式の最小化問題が見えてきます．\n",
     "\n",
     "\\begin{equation}\n",
-    "{\\bf u}^TA{\\bf u}-2{\\bf u}^T{\\bf b}\n",
+    "{\\bf u}^\\top A{\\bf u}-2{\\bf u}^\\top{\\bf b}\n",
     "\\end{equation}\n",
     "\n",
     "この解は\n",
@@ -166,7 +166,7 @@
     "です．\n",
     "${\\bf u}$の前半3つの成分が回転成分$\\bf a$，後半3つが平行移動ベクトル${\\bf t}$です．\n",
     "$\\bf a$を回転軸と回転角度に戻すために，$\\theta = ||{\\bf a}||$, ${\\bf w} = {\\bf a}/\\theta$を計算します．\n",
-    "これらを式(\\ref{eq:theta_w_to_rotmat})に代入するとPoint-to-planeで計算した回転行列が得られます．\n"
+    "これらを式(4.20)に代入するとPoint-to-planeで計算した回転行列が得られます．\n"
    ]
   },
   {
@@ -213,7 +213,7 @@
    "metadata": {},
    "source": [
     "次に，ICPアルゴリズムのStep1を実装します．\n",
-    "この処理は\\ref{sec:Step 1. 最近傍点探索}節とほぼ同様ですが，近傍点の法線群である```np_normal_y```を取り出す処理が追加されています．"
+    "この処理は4.4.1節とほぼ同様ですが，近傍点の法線群である```np_normal_y```を取り出す処理が追加されています．"
    ]
   },
   {
@@ -319,7 +319,7 @@
     "      theta(float): rotation angle\n",
     "    \"\"\"\n",
     "    \n",
-    "    # make skew-symmetric cross product matrix \n",
+    "    # 歪対象行列\n",
     "    w = np.array([[     0.0, -axis[2],  axis[1]],\n",
     "                  [ axis[2],      0.0, -axis[0]],\n",
     "                  [-axis[1],  axis[0],      0.0]\n",
@@ -377,7 +377,7 @@
    "metadata": {},
    "source": [
     "ターゲット点群に近づいたことがわかりました．\n",
-    "これ以降は，\\ref{sec:Step 3. 物体の姿勢のアップデート}節，\\ref{Step 4. 収束判定}節の手続きを踏むことによって，ICPアルゴリズムを動作させることができます．\n",
+    "これ以降は，4.4.3節，4.4.4節の手続きを踏むことによって，ICPアルゴリズムを動作させることができます．\n",
     "\n",
     "Point-to-plane型ICPアルゴリズムの処理を一つのクラス（ICPRegistration_PointToPlane）として実装したサンプルコードは，\\sf{icp\\_registration.py}にあります．\n",
     "このクラスを利用してICPをおこなうサンプルコードの実行方法は次の通りです．第一引数に１を指定してください．\n",
@@ -391,15 +391,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "図は，Point-to-pointとPoint-to-planeの繰り返し演算における位置ずれ誤差の推移です．\n",
-    "Point-to-planeのほうが少ない回数で繰り返し演算が収束したことが分かります．"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## ICPRegistrationクラスのテスト"
+    "## ICPRegistrationクラスのテスト\n",
+    "Point-to-PlaneとPoint-to-Pointの収束性能を比較します．"
    ]
   },
   {
@@ -453,10 +446,18 @@
     "plt.xlabel(\"Iteration\")\n",
     "plt.plot(reg1.d, c=\"b\")\n",
     "plt.plot(reg2.d, c=\"r\")\n",
-    "plt.legend(labels=[\"Point-to-point\",\"Point-to-plane\"])\n",
+    "plt.legend(labels=[\"Point-to-Point\",\"Point-to-Plane\"])\n",
     "plt.gca().get_xaxis().set_major_locator(ticker.MaxNLocator(integer=True))\n",
     "\n",
     "plt.savefig(\"reg_error_compared.png\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "図は，Point-to-pointとPoint-to-planeの繰り返し演算における位置ずれ誤差の推移です．\n",
+    "Point-to-planeのほうが少ない回数で繰り返し演算が収束したことが分かります．"
    ]
   }
  ],
@@ -465,7 +466,7 @@
    "hash": "ba898e0815c04663ea6239e0c883a77c86c002ba62ec9e21fc2546e57e704740"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -479,7 +480,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
