--- a/section_registration/ICP-point-to-point.ipynb
+++ b/section_registration/ICP-point-to-point.ipynb
@@ -53,7 +53,7 @@
    "metadata": {},
    "source": [
     "ソース点群$P$を変数名```pcd_s```，ターゲット点群$X$を変数名```pcd_t```としてデータを用意します．\n",
-    "可視化結果をわかりやすくするために，点群をvoxel_down_sample（第\\ref{sec:voxel_down_sampling}節参照）によって間引いています．\n",
+    "可視化結果をわかりやすくするために，点群をvoxel_down_sample（2.4.1節参照）によって間引いています．\n",
     "\n",
     "初期状態を表示させてみましょう．"
    ]
@@ -221,8 +221,8 @@
     "import numpy.linalg as LA\n",
     "import copy\n",
     "\n",
-    "pcd1 = o3d.io.read_point_cloud( \"data/bun000.pcd\" )\n",
-    "pcd2 = o3d.io.read_point_cloud( \"data/bun045.pcd\" )\n",
+    "pcd1 = o3d.io.read_point_cloud( \"../data/bun000.pcd\" )\n",
+    "pcd2 = o3d.io.read_point_cloud( \"../data/bun045.pcd\" )\n",
     "\n",
     "pcd_s = pcd1.voxel_down_sample(voxel_size=0.005)\n",
     "pcd_t = pcd2.voxel_down_sample(voxel_size=0.005)\n",
@@ -569,7 +569,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$N_{py}$の最大固有値に対する固有ベクトルが${\\bf q}_R = [q_0 q_1 q_2 q_3]^T$に対応します．\n",
+    "$N_{py}$の最大固有値に対する固有ベクトルが${\\bf q}_R = [q_0 q_1 q_2 q_3]^\\top$に対応します．\n",
     "固有値の計算は```np.linalg.eig()```に任せます．\n",
     "```w```は固有値，```v```が固有ベクトルです．\n",
     "```v```において，最大固有値のインデクスの列成分が${\\bf q}_R$，すなわち位置ずれ誤差最小化する回転を表す単位四元数です．取り出して回転行列に変換しましょう．"
@@ -733,6 +733,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
     "plt.ylabel(\"Distance [m/pts.]\")\n",
     "plt.xlabel(\"# of iterations\")\n",
     "plt.plot(reg.d)"
@@ -790,7 +792,7 @@
    "hash": "ba898e0815c04663ea6239e0c883a77c86c002ba62ec9e21fc2546e57e704740"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -804,7 +806,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
