--- a/section_registration/NNSearch.ipynb
+++ b/section_registration/NNSearch.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# 最近傍点の探索（単純な方法）\n",
     "点群$X$から任意の点（クエリとも呼びます）$\\bf p$の最近傍点を見つけ出すタスクのことを最近傍点を探索や単に検索と呼びます．\n",
-    "点間の距離として二乗距離を使うことにすると，このタスクは以下の式で定式化することができます．\n",
+    "点間の距離として二乗距離を使うことにすると，最近傍探索は次のように書くことができます．\n",
     "\n",
     "\\begin{equation}\n",
     "\\label{eq:dist_point-pcd}\n",
@@ -203,11 +203,18 @@
     "np.asarray(pcd.colors)[idx[1:], :] = [0, 1, 1]\n",
     "o3d.visualization.draw_geometries([pcd])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -221,7 +228,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
